[package]
name = "lonely_engine_mk1"
version = "0.1.0"
edition = "2024"

[dependencies]
winapi = { version = "0.3.9", features = ["wincon", "consoleapi", "processenv", "winbase", "winuser"] }
windows = { version = "0.28.0", features = ["Win32", "Win32_Media", "Win32_Media_Audio", "Win32_Foundation", "Win32_System_Console"]}
